--- a/creative_plus/ru_RU.properties
+++ b/creative_plus/ru_RU.properties
@@ -2535,9 +2535,9 @@ creative_plus.action.select_reset.sign=Сбросить
 creative_plus.action.else.else.name=Иначе
 creative_plus.action.else.else.description=...
 creative_plus.action.else.else.sign=Иначе
-creative_plus.action.call_function.call_function.name=CALL_FUNCTION
-creative_plus.action.call_function.call_function.description=...
-creative_plus.action.call_function.call_function.sign=CallFunction
+creative_plus.action.call_function.name=Вызов функции
+creative_plus.action.call_function.description=...
+creative_plus.action.call_function.sign=Вызов Функции
 creative_plus.action.start_process.name=Запустить процесс
 creative_plus.action.start_process.description=...
 creative_plus.action.start_process.sign=Запуск Процесс
