Локализация к функции и процессу (#5)
* Update ru_RU.properties

* Локализация к процессам и функциям

Co-authored-by: Andrey Pfau <xjcyan1de@yandex.ru>

--- a/creative_plus/ru_RU.properties
+++ b/creative_plus/ru_RU.properties
@@ -258,6 +258,20 @@ creative_plus.trigger.fluid_level_change.sign=Изм. уровн. воды
 creative_plus.trigger.sponge_absorb.name=Губка впитывает воду
 creative_plus.trigger.sponge_absorb.description=Выполняет код, когда губка впитывает воду
 creative_plus.trigger.sponge_absorb.sign=Губка впит. воду
+creative_plus.action.call_function.argument.function_name.name=Имя вызываемой функции
+creative_plus.action.start_process.name=Запустить процесс
+creative_plus.action.start_process.description=...
+creative_plus.action.start_process.sign=Запуск Процесс
+creative_plus.action.start_process.argument.process_name.name=Имя запускаемого процесса
+creative_plus.action.start_process.argument.local_variables_mode.name=Режим локальной переменной
+creative_plus.action.start_process.argument.local_variables_mode.enum.dont_copy.name=Не копировать
+creative_plus.action.start_process.argument.local_variables_mode.enum.copy.name=Копировать
+creative_plus.action.start_process.argument.local_variables_mode.enum.share.name=Разделить переменные
+creative_plus.action.start_process.argument.target_mode.name=Цель процесса
+creative_plus.action.start_process.argument.enum.current_target.name=Текущая цель
+creative_plus.action.start_process.argument.enum.current_selection.name=Цель из выборки
+creative_plus.action.start_process.argument.enum.no_target.name=Без цели
+creative_plus.action.start_process.argument.enum.for_each_in_selection.name=Для каждого в выборке
 creative_plus.trigger.process.name=Процесс
 creative_plus.trigger.process.description=...
 creative_plus.trigger.process.sign=Процесс
