--- a/skins/fr_FR.properties
+++ b/skins/fr_FR.properties
@@ -1,16 +1,16 @@
-skins.prefix=Skins
-skins.loading=Loading Skin...
+skins.prefix=Скины
+skins.loading=Загрузка скина...
 skins.help=Использование\: '/skin <ник>' или '/skin <url>'
 skins.help_head=Использование\: '/head <ник>' или '/head <url>'
 skins.set.top=Скин установлен
 skins.set.bottom=Пожалуйста, перезайдите на сервер
-skins.error=An error occurred whilst loading skin\: {0}
+skins.error=Произошла ошибка при загрузке скина\: {0}
 skins.error.load_url=Не удалось загрузить скин по ссылке
 skins.error.load_nick=Скин игрока с таким ником не найден
 skins.error.invalid_nick_or_url=Введён неправильный URL или ник игрока. Попробуйте другой
-skins.error.determine_file_size=Cannot determine size of file
-skins.error.load_image=Couldn't load image
+skins.error.determine_file_size=Не удалось определить размер файла
+skins.error.load_image=Не удалось загрузить изображение
 skins.error.not_found=Скин не найден
 skins.error.uncaught_exception={0}
 skins.error.only_in_creative=Доступно только в творческом режиме
-skins.head.error.unknown_user=Unknown User
+skins.head.error.unknown_user=Неизвестный пользователь
