--- a/i18n/messages_en.properties
+++ b/i18n/messages_en.properties
@@ -33,7 +33,7 @@ creative_plus.action.player_set_equipment.argument.slot.enum.legs.name=Leggings
 creative_plus.action.player_set_equipment.argument.slot.enum.off_hand.name=Off Hand
 creative_plus.action.start_process.argument.enum.current_target.name=Current Target
 creative_plus.action.start_process.argument.local_variables_mode.enum.copy.name=Copy
-creative_plus.action.start_process.argument.local_variables_mode.enum.dont_copy.name=Don't copy
+creative_plus.action.start_process.argument.local_variables_mode.enum.dont_copy.name=Don\'t copy
 creative_plus.action.start_process.sign=Start Process
 creative_plus.category.entity_action.subcategory.movement.name=Move
 creative_plus.category.function.sign=Function
