New Crowdin updates (#13)
* New translations messages_ru.properties (English)

* New translations messages_ru.properties (English)

--- a/i18n/messages_en.properties
+++ b/i18n/messages_en.properties
@@ -1,3 +1,108 @@
+creative.build_permission.revoked=Building Denied
+creative.commands.hints.off=Tooltips disabled
+creative.commands.hints.on=Tooltips enabled
+creative.commands.plot.not_found=No world was found with this ID
+creative.commands.unknown_player=Player not found
+creative.commands.usage=Command Usage\:
+creative.menu.my_worlds.create_world.title=Create world
+creative.menu.my_worlds.icon.delete=Delete world
+creative.menu.my_worlds.title=My Worlds
+creative.menu.world_generator.flat.name=Superflat World
+creative.menu.world_generator.title=World Generation
+creative.menu.world_generator.void.name=Empty World
+creative.menu.worlds.settings.back=Back
+creative.menu.worlds_online.title=Worlds Online
+creative.prefix=Creative
+creative.quit_world={0} left the world
+creative.world_delete.no=Cancel
+creative.world_delete.title=Confirm World Deletion
+creative.world_delete.warning=WARNING\!
+creative.world_icon.author=Author\: {0}
+creative.world_icon.id=ID\: {0}
+creative.world_icon.votes=Votes\: {0}
+creative.world_settings.players_online=Online players
+creative_plus.action.control_wait.argument.time_unit.enum.minutes.name=Minutes
+creative_plus.action.control_wait.argument.time_unit.enum.seconds.name=Seconds
+creative_plus.action.control_wait.argument.time_unit.enum.ticks.name=Ticks
+creative_plus.action.control_wait.argument.time_unit.name=Time Unit
+creative_plus.action.control_wait.name=Wait
+creative_plus.action.control_wait.sign=Wait
+creative_plus.action.else.else.name=Else
+creative_plus.action.else.else.sign=Else
+creative_plus.action.entity_damage.sign=Damage
+creative_plus.action.entity_give_potion_effects.argument.overwrite.name=Overwrite existing effects
+creative_plus.action.entity_heal.sign=Heal
+creative_plus.action.entity_set_animal_age.argument.lock.enum.disable.name=Disabled
+creative_plus.action.entity_set_animal_age.argument.lock.enum.dont_change.name=Don't change
+creative_plus.action.game_spawn_mob.argument.boots.name=Boots
 creative_plus.action.game_spawn_mob.argument.chestplate.name=Chestplate
+creative_plus.action.game_spawn_mob.argument.helmet.name=Helmet
+creative_plus.action.game_spawn_mob.argument.leggings.name=Leggings
+creative_plus.action.if_player_has_room_for_item.argument.checked_slots.enum.armor.name=Armor
+creative_plus.action.if_player_is_holding.argument.hand_slot.enum.off_hand.name=Off Hand
+creative_plus.action.player_clear_chat.name=Clear Chat
+creative_plus.action.player_clear_chat.sign=Clear Chat
+creative_plus.action.player_clear_inventory.argument.clear_mode.enum.armor.name=Armor
+creative_plus.action.player_damage.sign=Damage
+creative_plus.action.player_give_items.name=Give Item
+creative_plus.action.player_give_items.sign=Give Item
+creative_plus.action.player_give_potion_effect.argument.overwrite.name=Overwrite existing effects
+creative_plus.action.player_heal.sign=Heal
+creative_plus.action.player_open_book.name=Open Book
+creative_plus.action.player_open_book.sign=Open Book
+creative_plus.action.player_send_action_bar.sign=Action Bar
+creative_plus.action.player_send_dialogue.argument.messages.name=Text to send
+creative_plus.action.player_send_dialogue.name=Dialogue
+creative_plus.action.player_send_dialogue.sign=Dialogue
+creative_plus.action.player_send_message.argument.messages.name=Message to send
+creative_plus.action.player_send_message.sign=Message
+creative_plus.action.player_send_title.sign=Title
+creative_plus.action.player_set_armor.argument.boots.name=Boots
 creative_plus.action.player_set_armor.argument.chestplate.name=Chestplate
+creative_plus.action.player_set_armor.argument.helmet.name=Helmet
+creative_plus.action.player_set_armor.argument.leggings.name=Leggings
+creative_plus.action.player_set_boss_bar.argument.style.enum.segmented_10.name=10 Segments
+creative_plus.action.player_set_boss_bar.argument.style.enum.segmented_12.name=12 Segments
+creative_plus.action.player_set_boss_bar.argument.style.enum.segmented_20.name=20 Segments
+creative_plus.action.player_set_boss_bar.argument.style.enum.segmented_6.name=6 Segments
 creative_plus.action.player_set_equipment.argument.slot.enum.chest.name=Chestplate
+creative_plus.action.player_set_equipment.argument.slot.enum.feet.name=Boots
+creative_plus.action.player_set_equipment.argument.slot.enum.hand.name=Main Hand
+creative_plus.action.player_set_equipment.argument.slot.enum.head.name=Helmet
+creative_plus.action.player_set_equipment.argument.slot.enum.legs.name=Leggings
+creative_plus.action.player_set_equipment.argument.slot.enum.off_hand.name=Off Hand
+creative_plus.action.start_process.argument.enum.current_target.name=Current Target
+creative_plus.action.start_process.argument.local_variables_mode.enum.copy.name=Copy
+creative_plus.action.start_process.argument.local_variables_mode.enum.dont_copy.name=Don't copy
+creative_plus.action.start_process.sign=Start Process
+creative_plus.category.else.sign=Else
+creative_plus.category.entity_action.subcategory.movement.name=Movement
+creative_plus.category.function.sign=Function
+creative_plus.category.player_action.subcategory.movement.name=Move
+creative_plus.category.process.sign=Process
+creative_plus.editor_equipment.else.name=Else
+creative_plus.editor_equipment.function.name=Function
+creative_plus.editor_equipment.player_action.examples.example_1=Give Item
+creative_plus.editor_equipment.process.name=Process
+creative_plus.selection.current.name=Current Target
+creative_plus.selection.current.sign=Current Target
+creative_plus.trigger.function.name=Function
+creative_plus.trigger.function.sign=Function
+creative_plus.trigger.player_join.sign=Join
+creative_plus.trigger.player_jump.sign=Jump
+creative_plus.trigger.player_move.sign=Move
+creative_plus.trigger.player_quit.sign=Quit
+creative_plus.trigger.process.name=Process
+creative_plus.trigger.process.sign=Process
+general.welcome_message.discord=DISCORD {0}
+general.welcome_message.site=OUR SITE {0}
+general.welcome_message.vk=VK {0}
+punishments.account_ban.message={0} has banned until {1}
+punishments.reason=Reason\: {0}
+punishments.time=Block time\: {0}
+skins.error.determine_file_size=Cannot determine size of file
+skins.error.load_image=Couldn't load image
+skins.error=An error occurred whilst loading skin\: {0}
+skins.head.error.unknown_user=Unknown User
+skins.loading=Loading Skin...
+skins.prefix=Skins
