New Crowdin updates (#14)
* New translations messages_ru.properties (English)

* New translations messages_ru.properties (English)

* New translations messages_ru.properties (English)

--- a/i18n/messages_en.properties
+++ b/i18n/messages_en.properties
@@ -32,8 +32,12 @@ creative_plus.action.else.else.sign=Else
 creative_plus.action.entity_damage.sign=Damage
 creative_plus.action.entity_give_potion_effects.argument.overwrite.name=Overwrite existing effects
 creative_plus.action.entity_heal.sign=Heal
+creative_plus.action.entity_set_absorption_health.sign=SetAbsorption
+creative_plus.action.entity_set_ai.name=Set AI
+creative_plus.action.entity_set_ai.sign=Set AI
 creative_plus.action.entity_set_animal_age.argument.lock.enum.disable.name=Disabled
 creative_plus.action.entity_set_animal_age.argument.lock.enum.dont_change.name=Don't change
+creative_plus.action.entity_set_creeper_explosion_power.sign=SetCreeperPower
 creative_plus.action.game_spawn_mob.argument.boots.name=Boots
 creative_plus.action.game_spawn_mob.argument.chestplate.name=Chestplate
 creative_plus.action.game_spawn_mob.argument.helmet.name=Helmet
@@ -57,6 +61,7 @@ creative_plus.action.player_send_dialogue.sign=Dialogue
 creative_plus.action.player_send_message.argument.messages.name=Message to send
 creative_plus.action.player_send_message.sign=Message
 creative_plus.action.player_send_title.sign=Title
+creative_plus.action.player_set_absorption_health.sign=SetAbsorption
 creative_plus.action.player_set_armor.argument.boots.name=Boots
 creative_plus.action.player_set_armor.argument.chestplate.name=Chestplate
 creative_plus.action.player_set_armor.argument.helmet.name=Helmet
@@ -79,19 +84,60 @@ creative_plus.category.else.sign=Else
 creative_plus.category.entity_action.subcategory.movement.name=Movement
 creative_plus.category.function.sign=Function
 creative_plus.category.player_action.subcategory.movement.name=Move
+creative_plus.category.player_event.name=Player Event
+creative_plus.category.player_event.sign=Player Event
+creative_plus.category.player_event.subcategory.click.description=Right and left clicking, breaking blocks
+creative_plus.category.player_event.subcategory.click.name=Click Events
+creative_plus.category.player_event.subcategory.damage.description=Getting damaged, shooting a bow
+creative_plus.category.player_event.subcategory.damage.name=Damage Events
+creative_plus.category.player_event.subcategory.death.description=Dying and respawning
+creative_plus.category.player_event.subcategory.death.name=Death Events
+creative_plus.category.player_event.subcategory.item.description=Dropping, picking up and eating items
+creative_plus.category.player_event.subcategory.item.name=Item Events
+creative_plus.category.player_event.subcategory.movement.description=Jumping, walking and flying
+creative_plus.category.player_event.subcategory.movement.name=Movement Events
+creative_plus.category.player_event.subcategory.world.description=Joining and leaving world, and etc
+creative_plus.category.player_event.subcategory.world.name=World Events
 creative_plus.category.process.sign=Process
+creative_plus.category.world_event.subcategory.blocks.name=Blocks Events
+creative_plus.category.world_event.subcategory.world.description=General World Events
+creative_plus.category.world_event.subcategory.world.name=World Events
 creative_plus.editor_equipment.else.name=Else
 creative_plus.editor_equipment.function.name=Function
 creative_plus.editor_equipment.player_action.examples.example_1=Give Item
+creative_plus.editor_equipment.player_event.description=Used to execute code when something is done by player or happens to him.
+creative_plus.editor_equipment.player_event.examples.example_1=Executes code when a player joins the world
+creative_plus.editor_equipment.player_event.name=Player Event
 creative_plus.editor_equipment.process.name=Process
 creative_plus.selection.current.name=Current Target
 creative_plus.selection.current.sign=Current Target
+creative_plus.trigger.cancellable=Cancellable
 creative_plus.trigger.function.name=Function
 creative_plus.trigger.function.sign=Function
+creative_plus.trigger.player_break_block.description=Executes code when a player breaks a block
+creative_plus.trigger.player_break_block.name=Player Break Block Event
+creative_plus.trigger.player_change_slot.description=Executes code when a player changes their hotbar slot
+creative_plus.trigger.player_change_slot.name=Player Change Slot Event
+creative_plus.trigger.player_join.description=Executes code when a player joins the world
+creative_plus.trigger.player_join.name=Player Join Game Event
 creative_plus.trigger.player_join.sign=Join
 creative_plus.trigger.player_jump.sign=Jump
+creative_plus.trigger.player_left_click.description=Executes code when a player left clicks
+creative_plus.trigger.player_left_click.name=Player Left Click Event
 creative_plus.trigger.player_move.sign=Move
+creative_plus.trigger.player_place_block.description=Executes code when a player places a block
+creative_plus.trigger.player_place_block.name=Player Place Block Event
+creative_plus.trigger.player_quit.description=Executes code when a player leaves the world
 creative_plus.trigger.player_quit.sign=Quit
+creative_plus.trigger.player_rejoin.name=Player Rejoin Game Event
+creative_plus.trigger.player_right_click.description=Executes code when a player right clicks while looking at a block or holding an item
+creative_plus.trigger.player_right_click.name=Player Right Click Event
+creative_plus.trigger.player_right_click_entity.description=Executes code when a player right clicks an entity
+creative_plus.trigger.player_right_click_entity.name=Player Right Click Entity Event
+creative_plus.trigger.player_right_click_player.description=Executes code when a player clicks another player
+creative_plus.trigger.player_right_click_player.name=Player Right Click Player Event
+creative_plus.trigger.player_swap_hands.description=Executes code when a player swaps an item or items between their main hand and off hand
+creative_plus.trigger.player_swap_hands.name=Player Swap Hands Event
 creative_plus.trigger.process.name=Process
 creative_plus.trigger.process.sign=Process
 general.welcome_message.discord=DISCORD {0}
