New Crowdin updates (#16)
* New translations messages_ru.properties (English)

* New translations messages_ru.properties (English)

* New translations messages_ru.properties (English)

--- a/i18n/messages_en.properties
+++ b/i18n/messages_en.properties
@@ -53,6 +53,7 @@ creative_plus.action.entity_launch_up.argument.power.name=Launch power
 creative_plus.action.entity_launch_up.description=Launches an entity up or down
 creative_plus.action.entity_launch_up.name=Launch Up
 creative_plus.action.entity_launch_up.sign=LaunchUp
+creative_plus.action.entity_remove_potion_effect.argument.effects.name=Effect(s) to remove
 creative_plus.action.entity_remove_potion_effect.description=Removes one or more potion effects from an entity
 creative_plus.action.entity_remove_potion_effect.name=Remove Potion Effect
 creative_plus.action.entity_remove_potion_effect.sign=RemovePotion
@@ -72,8 +73,11 @@ creative_plus.action.entity_set_animal_age.argument.age.name=Age
 creative_plus.action.entity_set_animal_age.argument.lock.enum.disable.name=Disabled
 creative_plus.action.entity_set_animal_age.argument.lock.enum.dont_change.name=Don't change
 creative_plus.action.entity_set_animal_age.argument.lock.enum.enable.name=Activated
+creative_plus.action.entity_set_animal_age.description=Sets an animal's age.
+creative_plus.action.entity_set_animal_age.name=Set Animal Age
+creative_plus.action.entity_set_animal_age.sign=SetAge
 creative_plus.action.entity_set_creeper_explosion_power.argument.power.name=Power
-creative_plus.action.entity_set_creeper_explosion_power.description=Sets a creeper explosion power.\nThis affects the damage and area of effect.
+creative_plus.action.entity_set_creeper_explosion_power.description=Sets a creeper explosion power. This affects the damage and area of effect.
 creative_plus.action.entity_set_creeper_explosion_power.name=Set Creeper Explosion Power
 creative_plus.action.entity_set_creeper_explosion_power.sign=SetCreeperPower
 creative_plus.action.entity_set_creeper_fuse.argument.fuse_ticks.name=Fuse ticks
@@ -150,9 +154,13 @@ creative_plus.action.game_bone_meal_block.name=Bone Meal Block
 creative_plus.action.game_cancel_event.description=Cancels the initial event that triggered this line of code
 creative_plus.action.game_cancel_event.name=Cancel Event
 creative_plus.action.game_cancel_event.sign=CancelEvent
+creative_plus.action.game_clone_region.argument.paste_pos.name=Position to paste to
+creative_plus.action.game_clone_region.argument.pos_1.name=Corner 1
+creative_plus.action.game_clone_region.argument.pos_2.name=Corner 2
 creative_plus.action.game_clone_region.description=Copies a region of blocks to another region, including air
 creative_plus.action.game_clone_region.name=Clone Region
 creative_plus.action.game_clone_region.sign=CloneRegion
+creative_plus.action.game_fill_container.argument.items.name=Item(s) to fill with
 creative_plus.action.game_fill_container.argument.location.name=Container location
 creative_plus.action.game_fill_container.description=Fills the container at a location with items
 creative_plus.action.game_fill_container.name=Fill Container
@@ -161,22 +169,78 @@ creative_plus.action.game_generate_tree.argument.location.name=Tree location
 creative_plus.action.game_generate_tree.argument.tree_type.enum.big_tree.name=Big Oak Tree
 creative_plus.action.game_generate_tree.argument.tree_type.enum.chorus_plant.name=Chorus Plant
 creative_plus.action.game_generate_tree.argument.tree_type.enum.crimson_fungus.name=Crimson Fungus
+creative_plus.action.game_generate_tree.argument.tree_type.enum.dark_oak.name=Dark Oak
+creative_plus.action.game_generate_tree.argument.tree_type.name=Tree Type
+creative_plus.action.game_generate_tree.name=Generate Tree
+creative_plus.action.game_generate_tree.sign=GenerateTree
 creative_plus.action.game_hide_event_message.argument.hide.enum.false.name=No
 creative_plus.action.game_hide_event_message.argument.hide.enum.true.name=Yes
+creative_plus.action.game_replace_container_items.argument.count.name=Amount of items to replace
 creative_plus.action.game_replace_container_items.argument.location.name=Container location
+creative_plus.action.game_replace_container_items.description=Replaces items in the container at a location with the given item
+creative_plus.action.game_replace_container_items.name=Replace Container Items
+creative_plus.action.game_replace_container_items.sign=ReplaceItems
+creative_plus.action.game_send_web_request.argument.content_type.enum.application_json.name=JSON (application/json)
+creative_plus.action.game_send_web_request.argument.content_type.enum.text_plain.name=Plain text (text/plain)
+creative_plus.action.game_send_web_request.argument.request_type.name=Request type
+creative_plus.action.game_send_web_request.argument.url.name=URL
+creative_plus.action.game_send_web_request.description=Sends a web request to a URL
+creative_plus.action.game_send_web_request.name=Send Web Request
+creative_plus.action.game_set_block.argument.block.name=Block
+creative_plus.action.game_set_block.argument.locations.name=Block location(s)
+creative_plus.action.game_set_block.description=Sets the block at a location
+creative_plus.action.game_set_block.name=Set Block
+creative_plus.action.game_set_block.sign=SetBlock
+creative_plus.action.game_set_event_damage.description=Sets the damage dealt in this event
+creative_plus.action.game_set_event_damage.name=Set Event Damage
+creative_plus.action.game_set_event_damage.sign=SetEventDamage
 creative_plus.action.game_set_event_experience.argument.experience.name=Experience amount
+creative_plus.action.game_set_event_experience.description=Sets the amount of experience this event should drop
+creative_plus.action.game_set_event_experience.name=Set Event Experience
+creative_plus.action.game_set_event_experience.sign=SetEventXP
+creative_plus.action.game_set_event_heal.argument.heal.name=Healing amount
+creative_plus.action.game_set_event_heal.description=Sets the amount of health regained in this event
+creative_plus.action.game_set_event_heal.name=Set Event Heal Amount
+creative_plus.action.game_set_event_heal.sign=SetEventHeal
+creative_plus.action.game_set_event_projectile.description=Replaces the projectile fired in the Shoot Bow Event
+creative_plus.action.game_set_event_projectile.name=Set Event Projectile
+creative_plus.action.game_set_event_projectile.sign=SetEventProj
+creative_plus.action.game_set_event_sound.argument.sound.name=New sound
+creative_plus.action.game_set_event_sound.description=Sets the sound to play for this event, replacing the original sound
+creative_plus.action.game_set_event_sound.name=Set Event Sound
+creative_plus.action.game_set_event_sound.sign=SetEventSound
+creative_plus.action.game_set_region.argument.block.name=Block
+creative_plus.action.game_set_region.argument.pos_1.name=Corner 1
+creative_plus.action.game_set_region.argument.pos_2.name=Corner 2
+creative_plus.action.game_set_region.description=Fills a region with a type of block
+creative_plus.action.game_set_region.name=Set Region
+creative_plus.action.game_set_region.sign=SetRegion
+creative_plus.action.game_spawn_experience_orb.argument.custom_name.name=Name
 creative_plus.action.game_spawn_experience_orb.argument.experience_amount.name=Experience amount
+creative_plus.action.game_spawn_experience_orb.argument.location.name=Spawn location
+creative_plus.action.game_spawn_experience_orb.description=Spawns an experience orb at a location
+creative_plus.action.game_spawn_experience_orb.name=Spawn Experience Orb
+creative_plus.action.game_spawn_experience_orb.sign=SpawnExpOrb
 creative_plus.action.game_spawn_item.argument.apply_motion.enum.false.name=No
 creative_plus.action.game_spawn_item.argument.apply_motion.enum.true.name=Yes
 creative_plus.action.game_spawn_item.argument.can_mob_pickup.enum.false.name=No
 creative_plus.action.game_spawn_item.argument.can_mob_pickup.enum.true.name=Yes
 creative_plus.action.game_spawn_item.argument.can_player_pickup.enum.false.name=No
 creative_plus.action.game_spawn_item.argument.can_player_pickup.enum.true.name=Yes
+creative_plus.action.game_spawn_item.argument.custom_name.name=Name
+creative_plus.action.game_spawn_item.argument.item.name=Item
+creative_plus.action.game_spawn_item.argument.location.name=Spawn location
+creative_plus.action.game_spawn_item.name=Spawn item
+creative_plus.action.game_spawn_item.sign=SpawnItem
 creative_plus.action.game_spawn_mob.argument.boots.name=Boots
 creative_plus.action.game_spawn_mob.argument.chestplate.name=Chestplate
+creative_plus.action.game_spawn_mob.argument.custom_name.name=Name
 creative_plus.action.game_spawn_mob.argument.health.name=Current health
 creative_plus.action.game_spawn_mob.argument.helmet.name=Helmet
 creative_plus.action.game_spawn_mob.argument.leggings.name=Leggings
+creative_plus.action.game_spawn_mob.argument.location.name=Spawn location
+creative_plus.action.game_spawn_vehicle.argument.custom_name.name=Name
+creative_plus.action.game_spawn_vehicle.argument.location.name=Spawn location
 creative_plus.action.if_entity_is_near_location.argument.ignore_y_axis.enum.false.name=Disabled
 creative_plus.action.if_entity_is_near_location.argument.ignore_y_axis.enum.true.name=Activated
 creative_plus.action.if_game_block_equals.argument.location.name=Block location
@@ -189,6 +253,7 @@ creative_plus.action.if_player_in_area.argument.ignore_y_axis.enum.true.name=Act
 creative_plus.action.if_player_is_holding.argument.hand_slot.enum.off_hand.name=Off Hand
 creative_plus.action.if_player_is_near.argument.ignore_y_axis.enum.false.name=Disabled
 creative_plus.action.if_player_is_near.argument.ignore_y_axis.enum.true.name=Activated
+creative_plus.action.if_variable_variable_is_type.argument.variable_type.enum.item.name=Item
 creative_plus.action.player_clear_chat.name=Clear Chat
 creative_plus.action.player_clear_chat.sign=Clear Chat
 creative_plus.action.player_clear_inventory.argument.clear_mode.enum.armor.name=Armor
@@ -221,9 +286,11 @@ creative_plus.action.player_open_book.name=Open Book
 creative_plus.action.player_open_book.sign=Open Book
 creative_plus.action.player_randomized_teleport.argument.keep_rotation.enum.false.name=Disabled
 creative_plus.action.player_randomized_teleport.argument.keep_rotation.enum.true.name=Activated
+creative_plus.action.player_remove_potion_effect.argument.potions.name=Effect(s) to remove
 creative_plus.action.player_remove_potion_effect.description=Removes one or more potion effects from an entity
 creative_plus.action.player_remove_potion_effect.name=Remove Potion Effect
 creative_plus.action.player_remove_potion_effect.sign=RemovePotion
+creative_plus.action.player_replace_items.argument.count.name=Amount of items to replace
 creative_plus.action.player_ride_entity.argument.name_or_uuid.name=Name or UUID of target to ride
 creative_plus.action.player_ride_entity.name=Ride Entity
 creative_plus.action.player_ride_entity.sign=RideEntity
@@ -288,6 +355,8 @@ creative_plus.action.start_process.argument.enum.current_target.name=Current Tar
 creative_plus.action.start_process.argument.local_variables_mode.enum.copy.name=Copy
 creative_plus.action.start_process.argument.local_variables_mode.enum.dont_copy.name=Don't copy
 creative_plus.action.start_process.sign=Start Process
+creative_plus.argument.block.name=Block
+creative_plus.argument.item.name=Item
 creative_plus.category.else.sign=Else
 creative_plus.category.entity_action.subcategory.movement.name=Movement
 creative_plus.category.function.sign=Function
@@ -318,6 +387,8 @@ creative_plus.editor_equipment.player_event.examples.example_1=Executes code whe
 creative_plus.editor_equipment.player_event.name=Player Event
 creative_plus.editor_equipment.process.name=Process
 creative_plus.game_value.fall_distance.name=Set Fall Distance
+creative_plus.game_value.name.name=Name
+creative_plus.menu.game_values.item.title=Item
 creative_plus.selection.current.name=Current Target
 creative_plus.selection.current.sign=Current Target
 creative_plus.selection.default_player.sign=Default
