New Crowdin updates (#18)
* Update source file messages_ru.properties

* New translations messages_ru.properties (English)

--- a/i18n/messages_en.properties
+++ b/i18n/messages_en.properties
@@ -407,7 +407,7 @@ creative_plus.trigger.player_break_block.name=Player Break Block Event
 creative_plus.trigger.player_change_slot.description=Executes code when a player changes their hotbar slot
 creative_plus.trigger.player_change_slot.name=Player Change Slot Event
 creative_plus.trigger.player_join.description=Executes code when a player joins the world
-creative_plus.trigger.player_join.name=Player Join Game Event
+creative_plus.trigger.player_join.name=Player Join World Event
 creative_plus.trigger.player_join.sign=Join
 creative_plus.trigger.player_jump.sign=Jump
 creative_plus.trigger.player_left_click.description=Executes code when a player left clicks
@@ -417,6 +417,7 @@ creative_plus.trigger.player_move.sign=Move
 creative_plus.trigger.player_place_block.description=Executes code when a player places a block
 creative_plus.trigger.player_place_block.name=Player Place Block Event
 creative_plus.trigger.player_quit.description=Executes code when a player leaves the world
+creative_plus.trigger.player_quit.name=Player Quit World Event
 creative_plus.trigger.player_quit.sign=Quit
 creative_plus.trigger.player_rejoin.name=Player Rejoin Game Event
 creative_plus.trigger.player_right_click.description=Executes code when a player right clicks while looking at a block or holding an item
