--- a/i18n/messages_ru.properties
+++ b/i18n/messages_ru.properties
@@ -1535,7 +1535,7 @@ creative_plus.category.control.sign=Контроль действий
 creative_plus.category.else.sign=Иначе
 creative_plus.category.entity.sign=Действие над сущ
 creative_plus.category.entity_action.name=Действие над сущностью
-creative_plus.category.entity_action.sign=Действие над сущ
+creative_plus.category.entity_action.sign=Сущность
 creative_plus.category.entity_action.subcategory.miscellaneous.description=Действия, которые относятся к другим категориям
 creative_plus.category.entity_action.subcategory.miscellaneous.name=Разное
 creative_plus.category.entity_action.subcategory.movement.description=Запуск, телепортация и другие взаимодействия связанные с перемещением сущности
@@ -1546,7 +1546,7 @@ creative_plus.category.entity_event.name=Триггер сущности
 creative_plus.category.entity_event.sign=Триггер сущност.
 creative_plus.category.function.sign=Функция
 creative_plus.category.game_action.name=Действие над миром
-creative_plus.category.game_action.sign=Действие над мир
+creative_plus.category.game_action.sign=Действ.Игра
 creative_plus.category.game_action.subcategory.block.description=Действия, которые взаимодействуют с миром и блоками
 creative_plus.category.game_action.subcategory.block.name=Действия с блоками
 creative_plus.category.game_action.subcategory.entity.description=Действия, которые создают сущностей в мире
@@ -1572,7 +1572,7 @@ creative_plus.category.if_player.subcategory.toggleable.name=Бинарные у
 creative_plus.category.if_variable.name=Если переменная
 creative_plus.category.if_variable.sign=Если переменная
 creative_plus.category.player_action.name=Действие над игроком
-creative_plus.category.player_action.sign=Действие над игр
+creative_plus.category.player_action.sign=Действ.Игрок
 creative_plus.category.player_action.subcategory.appearance.description=Действия, которые изменяют внешний вид игрока
 creative_plus.category.player_action.subcategory.appearance.name=Внешний вид
 creative_plus.category.player_action.subcategory.communication.description=Отображение текста, отправка сообщений и проигрывание эффектов
