--- a/i18n/messages_ru.properties
+++ b/i18n/messages_ru.properties
@@ -2115,12 +2115,12 @@ general.welcome_message.site=НАШ САЙТ {0}
 general.welcome_message.vk=VK {0}
 punishments.account_ban.message={0} заблокирован до {1}
 punishments.account_ban.title=ВАШ АККАУНТ ЗАБЛОКИРОВАН
-punishments.account_ban.unbanned={1} Разблокировал игрока {0}
+punishments.account_ban.unbanned={1} разблокировал игрока {0}
 punishments.address_ban.title=ВАШ IP АДРЕС ЗАБЛОКИРОВАН
 punishments.already_banned=Игрок/адрес уже заблокирован
 punishments.chat_mute.message=Чат игрока {0} заблокирован до {1}
 punishments.chat_mute.title=ВАШ ЧАТ ЗАБЛОКИРОВАН
-punishments.chat_mute.unbanned={1} Разблокировал чат игрока {0}
+punishments.chat_mute.unbanned={1} разблокировал чат игрока {0}
 punishments.duration=Время до конца блокировки: {0}
 punishments.help.ban=/ban <игрок> <время> <причина>
 punishments.help.mute=/mute <игрок> <время> <причина>
